<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_item">enter_item</string>
    <string name="enter_text">Item Description</string>
    <string name="enter_item_value">Enter Item</string>
    <string name="quantity">Quantity</string>
    <string name="enter_item_brand">Brand</string>
    <string name="enter_item_size">S , M , L or Weight in kgs</string>
    <string name="save">Save</string>
    <string name="item_list">Item Description</string>
    <string name="sure_value">Are you sure?</string>
    <string name="yes_conf_button">Yes</string>
    <string name="no_conf_btn">No</string>
    <string name="edit_item_des">Edit Item</string>
</resources>
