<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="match_parent"
                android:hint="@string/enter_item_value"
                android:layout_height="wrap_content"
                android:id="@+id/todoitem"
                android:layout_below="@+id/title" />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/quantity"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:id="@+id/item_quantity"
                android:layout_below="@+id/todoitem" />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/enter_item_brand"
                android:layout_height="wrap_content"
                android:id="@+id/item_brand"
                android:layout_below="@+id/item_quantity" />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/enter_item_size"
                android:layout_height="wrap_content"
                android:id="@+id/item_size"
                android:layout_below="@+id/item_brand" />

            <Button
                android:background="@color/colorAccent"
                android:textColor="@color/cardview_light_background"
                android:id="@+id/save_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/save"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
