<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout

            android:padding="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/conf_dialog"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:text="@string/sure_value"
                android:padding="6dp"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginTop="45dp"
                android:id="@+id/conf_no_btn"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_conf_btn"/>
            <Button
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:id="@+id/conf_yes_btn"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_conf_button"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>